Replace "Collections.singletonList" by "List.of"